--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "send-a-wish",
-	"version": "1.0.0",
-	"description": "",
+	"version": "1.0.1",
+	"description": "Send a wish",
 	"main": "dist/main.js",
 	"scripts": {
 		"prod": "./bin/production",
@@ -11,59 +11,59 @@
 	"author": "Jérémy Levron <jeremylevron@19h47.fr> (http://19h47.fr)",
 	"license": "ISC",
 	"dependencies": {
-		"html2canvas": "^1.0.0-alpha.12",
-		"gsap": "^2.0.2",
-		"vue": "^2.5.21",
-		"vuex": "^3.0.1"
+		"gsap": "^2.1.3",
+		"html2canvas": "^1.0.0-rc.1",
+		"vue": "^2.6.10",
+		"vuex": "^3.1.1"
 	},
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/send-a-wish/pack.git"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.2.2",
+		"@babel/core": "^7.4.5",
 		"@babel/plugin-proposal-class-properties": "^7.2.3",
 		"@babel/plugin-proposal-decorators": "^7.2.3",
 		"@babel/plugin-syntax-dynamic-import": "^7.2.0",
 		"@babel/plugin-transform-modules-amd": "^7.2.0",
 		"@babel/plugin-transform-runtime": "^7.2.0",
 		"@babel/polyfill": "^7.2.5",
-		"@babel/preset-env": "^7.2.3",
+		"@babel/preset-env": "^7.4.5",
 		"@babel/runtime": "^7.2.0",
-		"autoprefixer": "^9.4.4",
+		"autoprefixer": "^9.5.1",
 		"babel-eslint": "^10.0.1",
-		"babel-loader": "^8.0.5",
-		"clean-webpack-plugin": "^1.0.0",
+		"babel-loader": "^8.0.6",
+		"clean-webpack-plugin": "^1.0.1",
 		"copy-webpack-plugin": "^4.6.0",
-		"css-loader": "^2.1.0",
-		"cssnano": "^4.1.8",
-		"eslint": "^5.12.0",
+		"css-loader": "^2.1.1",
+		"cssnano": "^4.1.10",
+		"eslint": "^5.16.0",
 		"eslint-config-airbnb-base": "^13.1.0",
 		"eslint-config-standard": "^12.0.0",
 		"eslint-import-resolver-webpack": "^0.10.1",
-		"eslint-loader": "^2.1.1",
-		"eslint-plugin-import": "^2.14.0",
+		"eslint-loader": "^2.1.2",
+		"eslint-plugin-import": "^2.17.3",
 		"eslint-plugin-node": "^8.0.0",
 		"eslint-plugin-promise": "^4.0.1",
 		"eslint-plugin-standard": "^4.0.0",
-		"eslint-plugin-vue": "^5.1.0",
+		"eslint-plugin-vue": "^5.2.2",
 		"file-loader": "^3.0.1",
 		"html-webpack-plugin": "^3.2.0",
 		"image-webpack-loader": "^4.6.0",
 		"mini-css-extract-plugin": "^0.5.0",
-		"node-sass": "^4.11.0",
+		"node-sass": "^4.12.0",
 		"postcss-loader": "^3.0.0",
 		"sass-loader": "^7.1.0",
-		"svg-sprite-loader": "^4.1.3",
-		"svg-transform-loader": "^2.0.3",
-		"svgo": "^1.1.1",
+		"svg-sprite-loader": "^4.1.6",
+		"svg-transform-loader": "^2.0.7",
+		"svgo": "^1.2.2",
 		"svgo-loader": "^2.2.0",
 		"url-loader": "^1.1.2",
-		"vue-loader": "^15.5.0",
-		"vue-template-compiler": "^2.5.21",
-		"webpack": "^4.28.3",
-		"webpack-cli": "^3.2.0",
-		"webpack-dev-server": "^3.1.14",
+		"vue-loader": "^15.7.0",
+		"vue-template-compiler": "^2.6.10",
+		"webpack": "^4.32.2",
+		"webpack-cli": "^3.3.2",
+		"webpack-dev-server": "^3.4.1",
 		"webpack-manifest-plugin": "^2.0.4",
 		"webpack-merge": "^4.2.1",
 		"webpack-notifier": "^1.7.0"
