--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
 	"author": "Jérémy Levron <jeremylevron@19h47.fr> (http://19h47.fr)",
 	"license": "ISC",
 	"dependencies": {
-		"gsap": "^3.2.4",
+		"@upstatement/prettier-config": "19h47/prettier-config",
+		"eslint-config-prettier": "^6.10.1",
+		"gsap": "3.2.4",
 		"html2canvas": "^1.0.0-rc.5",
+		"prettier": "^2.0.2",
+		"prettier-eslint": "^9.0.1",
 		"vue": "^2.6.10",
 		"vuex": "^3.1.2"
 	},
@@ -21,47 +25,47 @@
 		"url": "https://github.com/send-a-wish/pack.git"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.7.5",
+		"@babel/core": "7.8.7",
 		"@babel/plugin-proposal-class-properties": "^7.7.4",
 		"@babel/plugin-proposal-decorators": "^7.7.4",
 		"@babel/plugin-syntax-dynamic-import": "^7.7.4",
-		"@babel/plugin-transform-modules-amd": "^7.7.5",
-		"@babel/plugin-transform-runtime": "^7.7.6",
+		"@babel/plugin-transform-modules-amd": "7.8.3",
+		"@babel/plugin-transform-runtime": "7.8.3",
 		"@babel/polyfill": "^7.7.0",
-		"@babel/preset-env": "^7.7.6",
-		"@babel/runtime": "^7.7.6",
-		"autoprefixer": "^9.7.3",
+		"@babel/preset-env": "7.8.7",
+		"@babel/runtime": "7.8.7",
+		"autoprefixer": "9.7.4",
 		"babel-eslint": "^10.0.3",
-		"babel-loader": "^8.0.6",
+		"babel-loader": "8.0.6",
 		"clean-webpack-plugin": "^3.0.0",
 		"copy-webpack-plugin": "^5.0.5",
 		"css-loader": "^3.2.1",
 		"cssnano": "^4.1.10",
 		"eslint": "^6.7.2",
 		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-config-standard": "^14.1.0",
+		"eslint-config-standard": "14.1.0",
 		"eslint-import-resolver-webpack": "^0.12.1",
-		"eslint-loader": "^3.0.3",
-		"eslint-plugin-import": "^2.18.2",
-		"eslint-plugin-node": "^11.0.0",
+		"eslint-loader": "3.0.3",
+		"eslint-plugin-import": "2.20.1",
+		"eslint-plugin-node": "11.0.0",
 		"eslint-plugin-promise": "^4.2.1",
 		"eslint-plugin-standard": "^4.0.1",
 		"eslint-plugin-vue": "^6.2.2",
-		"file-loader": "^5.1.0",
-		"html-webpack-plugin": "^3.2.0",
+		"file-loader": "5.1.0",
+		"html-webpack-plugin": "3.2.0",
 		"image-webpack-loader": "^6.0.0",
 		"mini-css-extract-plugin": "^0.9.0",
 		"node-sass": "^4.13.0",
 		"postcss-loader": "^3.0.0",
 		"sass-loader": "^8.0.0",
-		"svg-sprite-loader": "^4.1.6",
-		"svg-transform-loader": "^2.0.8",
+		"svg-sprite-loader": "4.2.1",
+		"svg-transform-loader": "2.0.8",
 		"svgo": "^1.3.2",
 		"svgo-loader": "^2.2.1",
-		"url-loader": "^3.0.0",
-		"vue-loader": "^15.7.2",
+		"url-loader": "3.0.0",
+		"vue-loader": "15.9.0",
 		"vue-template-compiler": "^2.6.10",
-		"webpack": "^4.41.2",
+		"webpack": "4.42.0",
 		"webpack-cli": "^3.3.10",
 		"webpack-dev-server": "^3.9.0",
 		"webpack-manifest-plugin": "^2.2.0",
