--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
 	"name": "send-a-wish",
-	"version": "1.0.3",
+	"version": "2.0.0",
 	"description": "Send a wish",
 	"main": "dist/main.js",
 	"scripts": {
-		"prod": "./bin/production",
-		"dev": "./bin/development",
-		"start": "./bin/start"
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build",
+		"lint": "vue-cli-service lint"
 	},
 	"author": "Jérémy Levron <jeremylevron@19h47.fr> (http://19h47.fr)",
 	"license": "ISC",
 	"dependencies": {
-		"gsap": "3.3.1",
+		"gsap": "3.4.0",
 		"html2canvas": "^1.0.0-rc.5",
-		"prettier": "^2.0.5",
-		"prettier-eslint": "^10.1.1",
 		"vue": "^2.6.10",
-		"vuex": "^3.4.0"
+		"vue-svg-sprite": "^1.4.1",
+		"vuex": "^3.5.1"
 	},
 	"repository": {
 		"type": "git",
@@ -24,52 +23,20 @@
 	},
 	"devDependencies": {
 		"@19h47/prettier-config": "19h47/prettier-config",
-		"@babel/core": "7.10.2",
-		"@babel/plugin-proposal-class-properties": "^7.10.1",
-		"@babel/plugin-proposal-decorators": "^7.10.1",
-		"@babel/plugin-syntax-dynamic-import": "^7.7.4",
-		"@babel/plugin-transform-modules-amd": "7.10.1",
-		"@babel/plugin-transform-runtime": "7.10.1",
-		"@babel/polyfill": "^7.10.1",
-		"@babel/preset-env": "7.10.2",
-		"@babel/runtime": "7.10.2",
-		"autoprefixer": "9.8.0",
-		"babel-eslint": "^10.0.3",
-		"babel-loader": "8.1.0",
-		"clean-webpack-plugin": "^3.0.0",
-		"copy-webpack-plugin": "^6.0.2",
-		"css-loader": "^3.5.3",
-		"cssnano": "^4.1.10",
-		"eslint": "^7.2.0",
-		"eslint-config-airbnb-base": "^14.0.0",
-		"eslint-config-prettier": "^6.11.0",
-		"eslint-config-standard": "14.1.1",
-		"eslint-import-resolver-webpack": "^0.12.1",
-		"eslint-loader": "4.0.2",
-		"eslint-plugin-import": "2.20.2",
-		"eslint-plugin-node": "11.1.0",
-		"eslint-plugin-promise": "^4.2.1",
-		"eslint-plugin-standard": "^4.0.1",
+		"@vue/cli-plugin-babel": "^4.4.6",
+		"@vue/cli-plugin-eslint": "^4.4.6",
+		"@vue/cli-plugin-vuex": "^4.4.6",
+		"@vue/cli-service": "^4.4.6",
+		"@vue/eslint-config-prettier": "^6.0.0",
+		"babel-eslint": "^10.1.0",
+		"eslint": "^7.4.0",
+		"eslint-plugin-prettier": "^3.1.4",
 		"eslint-plugin-vue": "^6.2.2",
-		"file-loader": "6.0.0",
-		"html-webpack-plugin": "4.3.0",
-		"image-webpack-loader": "^6.0.0",
-		"mini-css-extract-plugin": "^0.9.0",
-		"node-sass": "^4.14.1",
-		"postcss-loader": "^3.0.0",
-		"sass-loader": "^8.0.0",
-		"svg-sprite-loader": "5.0.0",
-		"svg-transform-loader": "2.0.13",
-		"svgo": "^1.3.2",
-		"svgo-loader": "^2.2.1",
-		"url-loader": "4.1.0",
-		"vue-loader": "15.9.2",
-		"vue-template-compiler": "^2.6.10",
-		"webpack": "4.43.0",
-		"webpack-cli": "^3.3.10",
-		"webpack-dev-server": "^3.11.0",
-		"webpack-manifest-plugin": "^2.2.0",
-		"webpack-merge": "^4.2.2",
-		"webpack-notifier": "^1.8.0"
+		"node-sass": "^4.13.1",
+		"prettier": "^2.0.2",
+		"prettier-eslint": "^11.0.0",
+		"sass": "^1.26.10",
+		"sass-loader": "^9.0.2",
+		"vue-template-compiler": "^2.6.11"
 	}
 }
